# csv_filter

./: pyproject.toml  requirements.txt
utils/: aggregate.py  filter.py  shortcuts.py
